{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 67,
  "lineage": "7207d1c8-0e1d-aeac-799c-1c127e98604c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081c75eaeac28ac34",
            "arn": "arn:aws:ec2:us-east-2:285276220124:instance/i-0696727de3e7934ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0696727de3e7934ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7fac6a75a9fe397",
            "private_dns": "ip-172-31-46-88.us-east-2.compute.internal",
            "private_ip": "172.31.46.88",
            "public_dns": "ec2-3-144-166-175.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.166.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dc65a0406bd6be1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-ohio"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-29533d65",
            "tags": {
              "Name": "terraform0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c23e7229eb9ed2d8"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081c75eaeac28ac34",
            "arn": "arn:aws:ec2:us-east-2:285276220124:instance/i-07611f390214c8c21",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07611f390214c8c21",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01aaf505c60a4bc6a",
            "private_dns": "ip-172-31-38-99.us-east-2.compute.internal",
            "private_ip": "172.31.38.99",
            "public_dns": "ec2-18-222-139-154.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.139.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a0a9d81680d9b2f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-ohio"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-29533d65",
            "tags": {
              "Name": "terraform1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c23e7229eb9ed2d8"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081c75eaeac28ac34",
            "arn": "arn:aws:ec2:us-east-2:285276220124:instance/i-0d4201537a28d80bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4201537a28d80bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b31bee99b46f0d1",
            "private_dns": "ip-172-31-44-224.us-east-2.compute.internal",
            "private_ip": "172.31.44.224",
            "public_dns": "ec2-18-223-117-189.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.117.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ae4487a3ef6ffa0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-ohio"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-29533d65",
            "tags": {
              "Name": "terraform2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c23e7229eb9ed2d8"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081c75eaeac28ac34",
            "arn": "arn:aws:ec2:us-east-2:285276220124:instance/i-065e729f35d7d47d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065e729f35d7d47d7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f99353a1639d5fff",
            "private_dns": "ip-172-31-47-135.us-east-2.compute.internal",
            "private_ip": "172.31.47.135",
            "public_dns": "ec2-18-222-180-119.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.180.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00d4a57090235905e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-ohio"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-29533d65",
            "tags": {
              "Name": "terraform3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c23e7229eb9ed2d8"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.terraform3",
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081c75eaeac28ac34",
            "arn": "arn:aws:ec2:us-east-2:285276220124:instance/i-0065effbfc75e8e7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0065effbfc75e8e7f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a7ecc11b275dee2",
            "private_dns": "ip-172-31-37-223.us-east-2.compute.internal",
            "private_ip": "172.31.37.223",
            "public_dns": "ec2-3-131-169-246.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.169.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d7222dffdaea7088",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-ohio"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-29533d65",
            "tags": {
              "Name": "terraform4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c23e7229eb9ed2d8"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:285276220124:instance/i-0e47e6fd8486c8afc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e47e6fd8486c8afc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform-nv",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e4c712da8706da7",
            "private_dns": "ip-172-31-92-187.ec2.internal",
            "private_ip": "172.31.92.187",
            "public_dns": "ec2-52-90-195-125.compute-1.amazonaws.com",
            "public_ip": "52.90.195.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ec2a8deb7f12409e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-nv"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-55f25274",
            "tags": {
              "Name": "terraform5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-051a9ff18b16a4da1"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-qas-nv",
            "aws_security_group.acesso-ssh-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:285276220124:security-group/sg-0c23e7229eb9ed2d8",
            "description": "acesso-ssh-ohio",
            "egress": [],
            "id": "sg-0c23e7229eb9ed2d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.67.159.140/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-ohio",
            "name_prefix": null,
            "owner_id": "285276220124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-6e46e705"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285276220124:security-group/sg-051a9ff18b16a4da1",
            "description": "acesso-ssh-nv",
            "egress": [],
            "id": "sg-051a9ff18b16a4da1",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.67.159.140/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-nv",
            "name_prefix": null,
            "owner_id": "285276220124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c1dc2abc"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}